module7/cert-manager/go-web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: https-go-web-service
spec:
  selector:
    app: https-go-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
